--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\"",
-    "build:ui": "rm -rf dist && cd ../fullstackopen/part2/phonebook && npm run build && cp -r dist ../phonebook_fullstack",
+    "build:ui": "shx rm -rf dist && cd ../fullstackopen/part2/phonebook && npm run build && shx cp -r dist D:/Users/lry/workspace/phonebook_fullstack",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "R Li",
